--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -1,5 +1,5 @@
 /* Header */
-
+/* 
 .header-logo {
   margin-right: 76px;
 }
@@ -17,11 +17,11 @@
   display: block;
   padding: 24px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 /* Hero section */
 
-.hero-section {
+/* .hero-section {
   background-color: #2e2f42;
   padding: 188px 0 188px;
   background-image: linear-gradient(
@@ -35,9 +35,9 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-}
+} */
 
-.hero {
+/* .hero {
   max-width: 496px;
   margin-left: auto;
   margin-right: auto;
@@ -48,9 +48,9 @@
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
-}
+} */
 
-.order-service-button {
+/* .order-service-button {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: block;
   align-items: center;
@@ -67,29 +67,29 @@
   background-color: #4d5ae5;
   cursor: pointer;
   background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.order-service-button:hover,
+/* .order-service-button:hover,
 .order-service-button:focus {
   background-color: #404bbf;
-}
+} */
 
 /*Our advantages*/
 
-.advantages-section {
+/* .advantages-section {
   background-color: #ffffff;
   padding: 120px 0 120px;
-}
+} */
 
-.our-advantage-title {
+/* .our-advantage-title {
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
   color: #ffffff;
   letter-spacing: 0.02em;
-}
+} */
 
-.advantages-list {
+не понятно .advantages-list {
   background-color: #ffffff;
   display: flex;
   gap: 24px;
@@ -99,24 +99,24 @@
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
 }
-
-.advantage-title {
+* 
+ /* .advantage-title { 
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
-}
+}  */
 
-.advantage-text {
+/* .advantage-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-}
+} */
 
-.svg-adv-container {
+/* .svg-adv-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -126,16 +126,16 @@
   border-radius: 4px;
   border: 1px solid #8e8f99;
   margin-bottom: 8px;
-}
+} */
 
 /*Our Team*/
 
-.our-team-section {
+/* .our-team-section {
   background-color: #f4f4fd;
   padding: 120px 0;
-}
+} */
 
-.our-team-title {
+/* .our-team-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -144,7 +144,7 @@
   text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 72px;
-}
+} */
 
 .our-team-list {
   display: flex;
