--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -146,11 +146,11 @@
   margin-bottom: 72px;
 } */
 
-.our-team-list {
+/* .our-team-list {
   display: flex;
   align-items: center;
   gap: 24px;
-}
+} */
 
 .our-team-item {
   background-color: #ffffff;
