--- a/css/styles.css
+++ b/css/styles.css
@@ -271,44 +271,85 @@ button {
   max-width: 320px;
   background-color: #2e2f42;
   padding: 72px 0 72px;
-  background-image: linear-gradient(
-      to bottom,
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url("../images/hero.jpg");
-
   margin: auto;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url("../images/Hero/hero-mobile-1x.jpg");
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/Hero/hero-mobile-2x.jpg");
+  }
 }
 
 @media screen and (min-width: 768px) {
   .hero-section {
     max-width: 767px;
     padding: 112px 0 112px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/Hero/hero-tablet-1x.jpg");
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero-section {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url("../images/Hero/hero-tablet-2x.jpg");
+    }
   }
 }
 
 @media screen and (min-width: 1158px) {
   .hero-section {
+    width: 100%;
     max-width: 1440px;
-    padding: 188px 0 188px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/Hero/hero-desktop-1x.jpg");
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero-section {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url("../images/Hero/hero-desktop-2x.jpg");
+    }
   }
 }
 
 .hero {
-  max-width: 216px;
+  max-width: 320px;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.1;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 72px;
+  margin: 0 auto 72px;
 }
 
 @media screen and (min-width: 768px) {
@@ -322,7 +363,7 @@ button {
 
 @media screen and (min-width: 1158px) {
   .hero {
-    margin-bottom: 48px;
+    margin-bottom: 0 auto 48px;
   }
 }
 
@@ -343,8 +384,6 @@ button {
   letter-spacing: 0.04em;
   color: #fff;
   background-color: #4d5ae5;
-
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
@@ -383,8 +422,7 @@ button {
 }
 @media screen and (min-width: 768px) {
   .advantages-list {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 24px;
+    width: calc((100% - 24px) / 2);
   }
 }
 
@@ -437,7 +475,12 @@ button {
 
 .our-team-section {
   background-color: #f4f4fd;
-  padding: 96px 0;
+}
+
+@media screen and (min-width: 1157px) {
+  .our-team-section {
+    padding: 96px 0;
+  }
 }
 
 @media screen and (min-width: 1158px) {
@@ -459,6 +502,24 @@ button {
 
 .our-team-list {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  gap: 24px;
+  gap: 72px;
+}
+@media screen and (min-width: 768px) {
+  .our-team-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 64px;
+    column-gap: 24px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .our-team-list {
+    flex-wrap: nowrap;
+    gap: 24px;
+  }
 }
