--- a/css/styles.css
+++ b/css/styles.css
@@ -41,17 +41,17 @@ button {
   cursor: pointer;
 }
 
-.visually-hidden {
+.visually-hidden:not(:focus):not(:active) {
   position: absolute;
-  white-space: nowrap;
   width: 1px;
   height: 1px;
-  overflow: hidden;
+  margin: -1px;
   border: 0;
   padding: 0;
-  clip: rect(0 0 0 0);
+  white-space: nowrap;
   clip-path: inset(100%);
-  margin: -1px;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /* Common */
@@ -146,6 +146,8 @@ button {
   }
 
   .nav-link {
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: block;
     padding: 24px 0;
     font-weight: 500;
@@ -153,22 +155,38 @@ button {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  .nav-link.current {
-    position: relative;
-  }
-
-  .nav-link.current::after {
+  .nav-link::after {
     content: "";
+
     position: absolute;
     left: 0;
     bottom: -1px;
+    border-radius: 2px;
+
     width: 100%;
     height: 4px;
-    border-radius: 2px;
     background-color: #404bbf;
+
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav-link:hover:after,
+  .nav-link:focus:after,
+  .nav-link.current::after {
+    opacity: 1;
+  }
+
+  .nav-link:hover,
+  .nav-link:focus,
+  .contacts-link:hover,
+  .contacts-link:focus,
+  .nav-link.current {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #404bbf;
   }
 
   .contacts {
@@ -183,12 +201,13 @@ button {
   }
 
   .contacts-link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: block;
+    gap: 40px;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #434455;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .nav-link:hover,
@@ -216,6 +235,7 @@ button {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    gap: 40px;
   }
 }
 
@@ -257,7 +277,12 @@ button {
 }
 
 .mobile-menu-nav {
-  margin-bottom: auto;
+  margin-bottom: 168px;
+}
+
+.mobile-menu-address-link:hover,
+.mobile-menu-address-link:focus {
+  color: #4d5ae5;
 }
 
 @media screen and (min-width: 768px) {
@@ -480,12 +505,8 @@ button {
 
 .our-team-section {
   background-color: #f4f4fd;
-}
-
-@media screen and (min-width: 1157px) {
-  .our-team-section {
-    padding: 96px 0;
-  }
+  width: 100%;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 1158px) {
@@ -495,8 +516,9 @@ button {
 }
 
 .our-team-title {
-  font-weight: 700;
+  padding-top: 96px;
   font-size: 36px;
+  font-weight: 700;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
@@ -505,26 +527,347 @@ button {
   margin-bottom: 72px;
 }
 
+.our-team-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 8px;
+  padding-left: 16px;
+  padding-top: 32px;
+  padding-right: 16px;
+  padding-bottom: 32px;
+}
 .our-team-list {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 72px;
 }
 @media screen and (min-width: 768px) {
   .our-team-list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    row-gap: 64px;
-    column-gap: 24px;
+    gap: 64px 24px;
   }
 }
 
 @media screen and (min-width: 1158px) {
   .our-team-list {
-    flex-wrap: nowrap;
+    display: flex;
+    align-items: center;
     gap: 24px;
   }
+}
+.our-team-item {
+  background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
+  width: calc((100% - 72px) / 4);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  max-width: 264px;
+}
+
+@media screen and (min-width: 1158px) {
+  .our-team-item {
+    width: calc((100% - 72px) / 4);
+  }
+}
+
+.member-name {
+  margin-bottom: 8px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+.member-role {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  background-color: #ffffff;
+  color: #434455;
+}
+
+.svg-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+.svg-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.svg-link:hover,
+.svg-link:focus {
+  background-color: #404bbf;
+}
+.svg-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  box-sizing: border-box;
+  transition: background-color 250ms ease;
+}
+/* Footer */
+.page-footer {
+  background-color: #2e2f42;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+@media screen and (min-width: 1158px) {
+  .page-footer {
+    padding: 100px 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    flex-wrap: wrap;
+    align-content: center;
+  }
+}
+
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 72px 24px;
+  align-content: center;
+  max-width: 584px;
+}
+
+.footer-logo .logo-part {
+  display: inline-block;
+  color: #f4f4fd;
+  margin-bottom: 16px;
+}
+.container-logo {
+  width: 288px;
+  margin-bottom: 72px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.footer-text {
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+}
+/* Social media  */
+
+.footer-links {
+  width: 208px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.footer-subtitle {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+  width: 208px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.svg-footer-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  margin-bottom: 72px;
+}
+.svg-footer-item {
+  width: 40px;
+  height: 40px;
+}
+.svg-footer-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.svg-footer-link:hover,
+.svg-footer-link:focus {
+  background-color: #31d0aa;
+}
+.svg-footer-img {
+  fill: #f4f4fd;
+  display: block;
+}
+
+/* Subscribe */
+
+.subscribe-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.subscribe {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+}
+.form-subscribe {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.subscribe-label {
+  width: 288px;
+}
+.subscribe-btn {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  border: none;
+}
+.subscribe-btn:hover,
+.subscribe-btn :focus {
+  background-color: #404bbf;
+}
+
+.subscribe-icon {
+  margin-left: 16px;
+  fill: #fff;
+}
+/* Leave your contacts and we will call you back */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop:not(.is-open) .modal {
+  transform: translate(-50%, -50%) scale(1.5);
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 72px 24px 24px 24px;
+  border-radius: 4px;
+  width: 408px;
+  min-height: 584px;
+  transform: translate(-50%, -50%);
+  background-color: #fcfcfc;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+    padding: 72px 24px 24px 24px;
+  }
+}
+.span-form {
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  width: 16px;
+  height: 16px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-right: 8px;
+}
+
+input:checked + label > span {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+.form-textarea:focus {
+  border: 1px solid #4d5ae5;
+}
+
+.checkbox-link {
+  line-height: 133%;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+
+/* Submit Button */
+
+.form-submit {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  display: block;
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: #4d5ae5;
+  border: none;
+  margin: auto;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
