--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
   background-color: #fff;
 }
 
-/* #region Reset */
+/* #region Reset +++*/
 
 ul,
 ol {
@@ -41,36 +41,22 @@ button {
   cursor: pointer;
 }
 
-.visually-hidden:not(:focus):not(:active) {
+.visually-hidden {
   position: absolute;
+  white-space: nowrap;
   width: 1px;
   height: 1px;
-  margin: -1px;
+  overflow: hidden;
   border: 0;
   padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
   clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.is-hidden-js {
-  transform: scale(0.3);
-  position: absolute;
+  clip-path: inset(100%);
   margin: -1px;
-  padding: 0;
-  width: 1px;
-  height: 1px;
-  border: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
 }
 
 /* #endregion */
 
-/* #region Common */
+/* #region Common +++*/
 
 .container {
   max-width: 320px;
@@ -136,115 +122,109 @@ button {
   background-color: transparent;
 }
 
-@media screen and (min-width: 768px) {
-  .burger-btn {
-    display: none;
-  }
-}
-
 .burger-icon {
   display: block;
   fill: #2f2f37;
 }
 
-.header-nav {
-  display: flex;
-  align-items: center;
-}
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
 
-.nav-list {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
+  .header-nav {
+    display: flex;
+    align-items: center;
+  }
 
-.header-logo {
-  padding: 24px 0;
-  margin-right: 120px;
+  .nav-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+
+  .header-logo {
+    padding: 24px 0;
+    margin-right: 120px;
+  }
+
+  .nav-link {
+    display: block;
+    padding: 24px 0;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .nav-link.current {
+    position: relative;
+  }
+
+  .nav-link.current::after {
+    content: "";
+
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+
+    background-color: #404bbf;
+  }
+
+  .contacts {
+    font-style: normal;
+    display: block;
+  }
+
+  .contacts-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .contacts-link {
+    display: block;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #434455;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .nav-link:hover,
+  .nav-link:focus,
+  .contacts-link:hover,
+  .contacts-link:focus,
+  .nav-link.current {
+    color: #404bbf;
+  }
 }
 
 @media screen and (min-width: 1158px) {
   .header-logo {
     margin-right: 76px;
   }
-}
 
-.nav-link {
-  display: block;
-  padding: 24px 0;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.nav-link.current {
-  position: relative;
-}
-
-.nav-link.current::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #404bbf;
-}
-
-.nav-link:hover,
-.nav-link:focus,
-.contacts-link:hover,
-.contacts-link:focus,
-.nav-link.current {
-  color: #404bbf;
-}
-
-.contacts {
-  font-style: normal;
-  display: block;
-}
-
-.contacts-list {
-  flex-direction: row;
-  align-items: center;
-  gap: 40px;
-}
-
-@media screen and (min-width: 1158px) {
   .contacts-list {
     flex-direction: row;
     align-items: center;
     gap: 40px;
   }
-}
 
-.contacts-link {
-  display: block;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: #434455;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (min-width: 1158px) {
   .contacts-link {
     padding: 24px 0;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
   }
-}
-
-.nav-link:hover,
-.nav-link:focus,
-.contacts-link:hover,
-.contacts-link:focus,
-.nav-link.current {
-  color: #404bbf;
 }
 
 /* #endregion */
@@ -258,17 +238,13 @@ button {
   width: 100%;
   height: 100%;
   background-color: #fff;
+
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (min-width: 768px) {
-  .mobile-menu {
-    display: none;
-  }
 }
 
 .mobile-menu.is-open {
@@ -281,6 +257,7 @@ button {
   position: relative;
   padding-top: 72px;
   padding-bottom: 40px;
+
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -296,22 +273,65 @@ button {
   margin-bottom: auto;
 }
 
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
 /* #endregion */
 
 /* #region Hero section */
 .hero-section {
-  max-width: 320px;
   background-color: #2e2f42;
-  padding: 72px 0;
-  margin: auto;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url("../images/Hero/hero-mobile-1x.jpg");
+    url(../images/Hero/hero-mobile-1x.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 320px;
+  padding: 72px 0;
+  margin: 0 auto;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.hero {
+  font-family: "Roboto", sans-serif;
+  text-transform: capitalize;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #fff;
+  max-width: 216px;
+  margin-bottom: 72px;
+}
+
+.order-service-button {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-transform: capitalize;
+  color: #fff;
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
 @media (min-device-pixel-ratio: 2),
@@ -322,134 +342,83 @@ button {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url("../images/Hero/hero-mobile-2x.jpg");
+      url(../images/Hero/hero-mobile-2x.jpg);
   }
 }
 
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .hero-section {
-    max-width: 767px;
+    max-width: 768px;
     padding: 112px 0;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url("../images/Hero/hero-tablet-1x.jpg");
+      url(../images/Hero/hero-tablet-1x.jpg);
   }
-}
 
-@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .hero-section {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url("../images/Hero/hero-tablet-2x.jpg");
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero-section {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/Hero/hero-tablet-2x.jpg);
+    }
   }
-}
 
-@media screen and (min-width: 1158px) {
-  .hero-section {
-    width: 100%;
-    max-width: 1440px;
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url("../images/Hero/hero-desktop-1x.jpg");
-  }
-}
-
-@media screen and (min-width: 1158px) and (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .hero-section {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url("../images/Hero/hero-desktop-2x.jpg");
-  }
-}
-.container {
-  min-width: 320px;
-  padding-left: 16px;
-  padding-right: 16px;
-  margin: 0 auto;
-}
-
-@media screen and (min-width: 428px) {
-  .container {
-    width: 428px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-  }
-}
-
-@media screen and (min-width: 1158px) {
-  .container {
-    width: 1158px;
-    padding: 0 15px;
-  }
-}
-.hero {
-  max-width: 320px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #fff;
-  margin: 0 auto 72px;
-}
-
-@media screen and (min-width: 768px) {
   .hero {
-    max-width: 496px;
     font-size: 56px;
-    margin-bottom: 36px;
     line-height: 1.07;
+    max-width: 496px;
+    margin-bottom: 36px;
   }
 }
 
-@media screen and (min-width: 1158px) {
+@media only screen and (min-width: 1158px) {
+  .hero-section {
+    max-width: 1440px;
+    padding: 188px 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/Hero/hero-desktop-1x.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero-section {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/Hero/hero-desktop-2x.jpg);
+    }
+  }
+
   .hero {
     margin-bottom: 48px;
   }
+
+  .order-service-button {
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .order-service-button:hover,
+  .order-service-button:focus {
+    background-color: #404bbf;
+  }
+
+  .order-service-button:active {
+    background-color: #404bbf;
+  }
 }
 
-/* #endregion */
-
-/* #region Hero button */
-
-.order-service-button {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: block;
-  align-items: center;
-  margin: 0 auto;
-  min-width: 169px;
-  height: 56px;
-  border: none;
-  border-radius: 4px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #fff;
-  background-color: #4d5ae5;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-}
-
-.order-service-button:hover,
-.order-service-button:focus {
-  background-color: #404bbf;
-}
 /* #endregion */
 
 /* #region Our advantages */
