--- a/css/styles.css
+++ b/css/styles.css
@@ -41,18 +41,6 @@ img {
 button {
   cursor: pointer;
 }
-.visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(100%);
-  margin: -1px;
-}
 
 /* #endregion */
 
@@ -285,14 +273,14 @@ button {
   width: 320px;
   padding: 72px 0;
   margin: 0 auto;
-  letter-spacing: 0.4;
+
   background-color: #2e2f42;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/Hero/hero-mobile-1x.jpg);
-  max-width: 1440px;
+  max-width: 320px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -315,6 +303,12 @@ button {
   color: #fff;
   max-width: 216px;
   margin-bottom: 72px;
+}
+.hero {
+  font-size: 56px;
+  line-height: 1.07;
+  max-width: 496px;
+  margin-bottom: 36px;
 }
 
 @media (min-device-pixel-ratio: 2),
@@ -352,12 +346,12 @@ button {
     }
   }
 
-  .hero {
+  /* .hero {
     font-size: 56px;
     line-height: 1.07;
     max-width: 496px;
     margin-bottom: 36px;
-  }
+  } */
 }
 
 @media only screen and (min-width: 1158px) {
@@ -382,34 +376,68 @@ button {
         url(../images/Hero/hero-desktop-2x.jpg);
     }
   }
+}
 
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+  height: 100%;
+}
+
+.hero {
+  color: #fff;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  max-width: 320px;
+  text-align: center;
+  margin: 0 auto 72px;
+}
+
+@media screen and (min-width: 768px) {
   .hero {
-    margin-bottom: 48px;
+    font-size: 56px;
+    line-height: 1.07;
+    max-width: 496px;
+    margin: 0 auto 36px;
   }
-  .order-service-button {
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    text-transform: capitalize;
-    color: #fff;
-    background-color: #4d5ae5;
-    border-radius: 4px;
-    padding: 16px 32px;
-    min-width: 169px;
-    height: 56px;
-    border: none;
-    align-items: center;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (min-width: 1158px) {
+  .hero {
+    margin: 0 auto 48px;
   }
+}
 
-  .order-service-button:hover,
-  .order-service-button:focus {
-    background-color: #404bbf;
-  }
+.hero-button {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-transform: capitalize;
+  color: #fff;
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  align-items: center;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-
+.hero-button:hover,
+.hero-button:focus {
+  background-color: #404bbf;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
 
 /* #endregion */
 
@@ -688,6 +716,7 @@ button {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 72px 24px;
+    display: grid;
   }
 }
 
@@ -746,16 +775,16 @@ button {
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
+  z-index: 10;
 }
-
+.our-portfolio-item-wrapper:hover .overlay {
+  transform: translateY(0);
+}
 .our-portfolio-item-wrapper {
   position: relative;
   overflow: hidden;
 }
 
-.our-portfolio-item-wrapper:hover .overlay {
-  transform: translateY(0);
-}
 /* #endregion */
 
 /* #region Footer */
@@ -812,7 +841,7 @@ button {
   }
 }
 
-svg-footer-img {
+.svg-footer-img {
   fill: var(--color-cloud);
 }
 .footer-logo {
@@ -869,6 +898,7 @@ svg-footer-img {
   color: #fff;
   margin-bottom: 16px;
 }
+
 @media screen and (min-width: 768px) {
   .footer-subtitle {
     margin-top: 0;
@@ -1262,20 +1292,29 @@ textarea::placeholder {
 
 .visually-hidden {
   position: absolute;
-  opacity: 0;
-  pointer-events: none;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
 }
 
 .span-form {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
-  background-color: transparent;
-  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  margin-right: 8px;
 }
 
 input[type="checkbox"]:checked + .form-label-text .span-form {
