--- a/css/styles.css
+++ b/css/styles.css
@@ -1193,7 +1193,7 @@ button {
 }
 
 .form-label {
-  fdisplay: block;
+  display: block;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
